feat(module-1/3-chain.ipynb): add Korean translation for "Chain" notebook feat(module-1/3-chain.ipynb): introduce `MessagesState` and `add_messages` reducer for graph state management feat(module-1/3-chain.ipynb): demonstrate tool calling with `ChatOpenAI` and `bind_tools` feat(module-1/3-chain.ipynb): add example of using `ChatOpenAI` with `gpt-4o` model feat(module-1/3-chain.ipynb): include `dotenv` for environment variable loading feat(module-1/3-chain.ipynb): add `OPENAI_API_KEY` to `.env.example` for API key configuration build(pyproject.toml): add `python-dotenv` to project dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [project]
 dependencies = [
   "langgraph>=0.6.8",
+  "python-dotenv>=1.1.1",
 ]
 description = "Add your description here"
 name = "foundation-introduction-to-langgraph"
