--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [project]
 dependencies = [
   "langgraph>=0.6.8",
+  "langgraph-checkpoint-sqlite>=2.0.11",
   "python-dotenv>=1.1.1",
 ]
 description = "Add your description here"
