--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ dependencies = [
   "langgraph>=0.6.8",
   "langgraph-checkpoint-sqlite>=2.0.11",
   "python-dotenv>=1.1.1",
+  "wikipedia>=1.4.0",
 ]
 description = "Add your description here"
 name = "foundation-introduction-to-langgraph"
