--- a/docs/langgraph/netlify.toml
+++ b/docs/langgraph/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  command = "pip install -r requirements.txt && pip install git+https://${GH_TOKEN}@github.com/squidfunk/mkdocs-material-insiders.git && mkdocs build"
+  command = "pip install -r requirements.txt && pmkdocs build"
   publish = "site/"
   environment = { PYTHON_VERSION = "3.12"}
