--- a/docs/langgraph/netlify.toml
+++ b/docs/langgraph/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  command = "pip install -r requirements.txt && pmkdocs build"
+  command = "pip install -r requirements.txt && mkdocs build"
   publish = "site/"
   environment = { PYTHON_VERSION = "3.12"}
