fix(netlify.toml): install mkdocs-material-insiders from git to fix build issues
The previous version of mkdocs-material was not compatible with the latest version of mkdocs, causing build failures. This commit installs the insider version of mkdocs-material directly from GitHub, which includes the necessary fixes.

The `requirements.txt` file was also updated to only include `mkdocs` as the other dependencies are now handled by `mkdocs-material-insiders`.

--- a/docs/langgraph/requirements.txt
+++ b/docs/langgraph/requirements.txt
@@ -1,8 +1,1 @@
-mkdocs-exclude-search
-mkdocs-tags-plugin
-mkdocs-include-markdown-plugin
-mkdocstrings[python]
-pymdown-extensions
-langchain
-langchain-core
-mkdocs-github-callouts
+mkdocs
