fix(netlify.toml): remove unnecessary pip install of requirements.txt
The `mkdocs build` command implicitly handles the installation of dependencies specified in `requirements.txt` when building the documentation. Explicitly installing them is redundant and can be removed to simplify the build process.

--- a/docs/langgraph/netlify.toml
+++ b/docs/langgraph/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  command = "pip install -r requirements.txt && pip install git+https://${GH_TOKEN}@github.com/langchain-ai/mkdocs-material-insiders.git && mkdocs build"
+  command = "pip install git+https://${GH_TOKEN}@github.com/langchain-ai/mkdocs-material-insiders.git && mkdocs build"
   publish = "site/"
   environment = { PYTHON_VERSION = "3.12"}
