--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,15 @@
 [project]
 dependencies = [
+  "faiss-cpu>=1.12.0",
+  "langchain-cohere>=0.4.6",
+  "langchain-community>=0.3.30",
+  "langchain-tavily>=0.2.11",
+  "langchain-text-splitters>=0.3.11",
   "langgraph>=0.6.8",
   "langgraph-checkpoint-sqlite>=2.0.11",
   "python-dotenv>=1.1.1",
   "trustcall>=0.0.39",
+  "unstructured>=0.18.15",
   "wikipedia>=1.4.0",
 ]
 description = "Add your description here"
