chore(deps): add dependabot configuration feat(ci): add workflow for deploying preview builds to Cloudflare Pages refactor(deps): remove unused .prettierignore and .prettierrc files refactor(deps): remove unused CODE_OF_CONDUCT.md and LICENSE.txt files refactor(deps): remove unused Dockerfile refactor(deps): remove langgraph submodule refactor(config): update quartz configuration for Langchain Academy refactor(layout): update footer links to point to the new repository

--- a/.gitignore
+++ b/.gitignore
@@ -206,6 +206,19 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 
+# Quartz
+.DS_Store
+.gitignore
+node_modules
+public
+prof
+tsconfig.tsbuildinfo
+.obsidian
+.quartz-cache
+private/
+.replit
+replit.nix
+
 # LangGraph
 .langgraph_api
 state_db
