ci(docs): optimize quartz clone for faster deployment
Use a shallow, single-branch clone (`--depth 1`) when fetching the Quartz repository. This significantly reduces the amount of data downloaded and speeds up the documentation deployment workflow.

--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -17,8 +17,7 @@ jobs:
 
       - name: Clone Quartz
         run: |
-          git clone https://github.com/jackyzha0/quartz.git quartz-build
-          cd quartz-build
+          git clone --depth 1 --single-branch https://github.com/jackyzha0/quartz.git quartz-build
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
