ci(docs): skip build steps on cache hit
The previous commit introduced build caching but did not make the build and copy steps conditional. This caused the workflow to perform unnecessary work even when a cache hit occurred.

This change adds `if` conditions to the copy and build steps so they are only executed on a cache miss. A logging step is also added to provide clear feedback on the cache status during the run.

--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -81,6 +81,7 @@ jobs:
             quartz-build-${{ steps.quartz-version.outputs.commit }}-
 
       - name: Copy docs to Quartz content
+        if: steps.cache-build.outputs.cache-hit != 'true'
         run: |
           # Remove default content
           rm -rf quartz-build/content/*
@@ -96,6 +97,14 @@ jobs:
         run: |
           cd quartz-build
           npx quartz build
+
+      - name: Show cache status
+        run: |
+          if [ "${{ steps.cache-build.outputs.cache-hit }}" == "true" ]; then
+            echo "✅ Build cache hit! Skipping build step."
+          else
+            echo "🔨 Cache miss. Build completed."
+          fi
 
       - name: Deploy to Cloudflare Pages
         uses: cloudflare/wrangler-action@v3
