--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -50,6 +50,13 @@ jobs:
         run: |
           git clone --depth 1 --single-branch https://github.com/jackyzha0/quartz.git quartz-build
 
+      - name: Configure Quartz
+        if: steps.cache-quartz.outputs.cache-hit != 'true'
+        run: |
+          sed -i 's/pageTitle: "Quartz 4"/pageTitle: "랭체인 아카데미"/' quartz-build/quartz.config.ts
+          sed -i 's|baseUrl: "quartz.jzhao.xyz"|baseUrl: "langchain-academy.pages.dev"|' quartz-build/quartz.config.ts
+          sed -i 's/body: "Source Sans Pro"/body: "Gowun Dodum"/' quartz-build/quartz.config.ts
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
