ci: add cleanup step before cloning quartz
Remove the quartz-build directory to ensure a clean clone and prevent potential conflicts.

--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -48,6 +48,7 @@ jobs:
       - name: Clone Quartz
         if: steps.cache-quartz.outputs.cache-hit != 'true'
         run: |
+          rm -rf quartz-build
           git clone --depth 1 --single-branch https://github.com/jackyzha0/quartz.git quartz-build
 
       - name: Configure Quartz
