--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -46,9 +46,11 @@ jobs:
             quartz-repo-
 
       - name: Clone Quartz
-        if: steps.cache-quartz.outputs.cache-hit != 'true'
+        # if: steps.cache-quartz.outputs.cache-hit != 'true'
         run: |
-          rm -rf quartz-build
+          if [ -d quartz-build ]; then
+            rm -rf quartz-build
+          fi
           git clone --depth 1 --single-branch https://github.com/jackyzha0/quartz.git quartz-build
 
       - name: Configure Quartz
