ci(deploy-docs): optimize quartz cloning by fetching and resetting instead of re-cloning
Update the deploy docs workflow to conditionally fetch and reset the quartz-build directory to origin/main if it exists, avoiding unnecessary re-cloning and improving efficiency.

--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -46,12 +46,16 @@ jobs:
             quartz-repo-
 
       - name: Clone Quartz
-        # if: steps.cache-quartz.outputs.cache-hit != 'true'
+        if: steps.cache-quartz.outputs.cache-hit != 'true'
         run: |
           if [ -d quartz-build ]; then
-            rm -rf quartz-build
+            cd quartz-build
+            git fetch origin
+            git reset --hard origin/main
+            cd ..
+          else
+            git clone --depth 1 --single-branch https://github.com/jackyzha0/quartz.git quartz-build
           fi
-          git clone --depth 1 --single-branch https://github.com/jackyzha0/quartz.git quartz-build
 
       - name: Configure Quartz
         # if: steps.cache-quartz.outputs.cache-hit != 'true'
