deploy_docs.yml 업데이트

--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -46,19 +46,12 @@ jobs:
             quartz-
 
       - name: Clone Quartz
-        if: steps.cache-quartz.outputs.cache-hit != 'true'
+        #if: steps.cache-quartz.outputs.cache-hit != 'true'
         run: |
-          if [ -d quartz-build ]; then
-            cd quartz-build
-            git fetch origin
-            git reset --hard origin/main
-            cd ..
-          else
-            git clone --depth 1 --single-branch https://github.com/jackyzha0/quartz.git quartz-build
-          fi
+          git clone --depth 1 --single-branch https://github.com/jackyzha0/quartz.git quartz-build
 
       - name: Configure Quartz
-        if: steps.cache-quartz.outputs.cache-hit != 'true'
+        #if: steps.cache-quartz.outputs.cache-hit != 'true'
         run: |
           sed -i 's/pageTitle: "Quartz 4"/pageTitle: "Jeongsk"/' quartz-build/quartz.config.ts
           sed -i 's|baseUrl: "quartz.jzhao.xyz"|baseUrl: "langchain-academy.jeongsk.work"|' quartz-build/quartz.config.ts
