--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -36,14 +36,14 @@ jobs:
           echo "commit=$QUARTZ_COMMIT" >> $GITHUB_OUTPUT
           echo "Quartz HEAD commit: $QUARTZ_COMMIT"
 
-      - name: Cache Quartz repository
-        id: cache-quartz
-        uses: actions/cache@v4
-        with:
-          path: quartz-build
-          key: quartz-${{ steps.quartz-version.outputs.commit }}
-          restore-keys: |
-            quartz-
+#      - name: Cache Quartz repository
+#        id: cache-quartz
+#        uses: actions/cache@v4
+#        with:
+#          path: quartz-build
+#          key: quartz-repo-${{ steps.quartz-version.outputs.commit }}
+#          restore-keys: |
+#            quartz-repo-
 
       - name: Clone Quartz
         #if: steps.cache-quartz.outputs.cache-hit != 'true'
