--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -61,8 +61,9 @@ jobs:
       - name: Configure Quartz
         if: steps.cache-quartz.outputs.cache-hit != 'true'
         run: |
-          sed -i 's/pageTitle: "Quartz 4"/pageTitle: "Jeongsk\'s Logs"/' quartz-build/quartz.config.ts
-          sed -i 's|baseUrl: "quartz.jzhao.xyz"|baseUrl: "langchain-academy.jeongsk.work"|' quartz-build/quartz.config.ts
+          sed -i "s/pageTitle: \"Quartz 4\"/pageTitle: \"Jeongsk's Logs\"/" quartz-build/quartz.config.ts
+          sed -i 's|baseUrl: "quartz.jzhao.xyz"|baseUrl: "log.jeongsk.work"|' quartz-build/quartz.config.ts
+          sed -i 's/locale: "en-US"/locale: "ko-KR"/' quartz-build/quartz.config.ts
           sed -i 's/body: "Source Sans Pro"/body: "Gowun Dodum"/' quartz-build/quartz.config.ts
           sed -i 's/header: "Schibsted Grotesk"/header: "Gowun Dodum"/' quartz-build/quartz.config.ts
           cat quartz-build/quartz.config.ts
