--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -58,9 +58,9 @@ jobs:
           sed -i 's/locale: "en-US"/locale: "ko-KR"/' quartz-build/quartz.config.ts
           sed -i 's/body: "Source Sans Pro"/body: "Gowun Dodum"/' quartz-build/quartz.config.ts
           sed -i 's/header: "Schibsted Grotesk"/header: "Gowun Dodum"/' quartz-build/quartz.config.ts
+          echo 'p, ul, text, a, tr, td, li, ol, ul, .katex, .math, .typst-doc, .typst-doc * { word-break: keep-all; }' >> quartz-build/quartz/styles/base.scss
           echo 'p, ul, text, a, tr, td, li, ol, ul, .katex, .math, .typst-doc, .typst-doc * { word-break: keep-all; }' >> quartz-build/quartz/styles/custom.scss
           cat quartz-build/quartz.config.ts
-          cat quartz-build/quartz/styles/custom.scss
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
