--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -53,14 +53,14 @@ jobs:
       - name: Configure Quartz
         if: steps.cache-quartz.outputs.cache-hit != 'true'
         run: |
-          sed -i "s/pageTitle: \"Quartz 4\"/pageTitle: \"Jeongsk\"/" quartz-build/quartz.config.ts
-          sed -i 's|baseUrl: "quartz.jzhao.xyz"|baseUrl: "log.jeongsk.work"|' quartz-build/quartz.config.ts
-          sed -i 's/locale: "en-US"/locale: "ko-KR"/' quartz-build/quartz.config.ts
-          sed -i 's/body: "Source Sans Pro"/body: "Gowun Dodum"/' quartz-build/quartz.config.ts
-          sed -i 's/header: "Schibsted Grotesk"/header: "Gowun Dodum"/' quartz-build/quartz.config.ts
-          echo 'p, ul, text, a, tr, td, li, ol, ul, .katex, .math, .typst-doc, .typst-doc * { word-break: keep-all; }' >> quartz-build/quartz/styles/base.scss
-          echo 'p, ul, text, a, tr, td, li, ol, ul, .katex, .math, .typst-doc, .typst-doc * { word-break: keep-all; }' >> quartz-build/quartz/styles/custom.scss
-          cat quartz-build/quartz.config.ts
+          cd quartz-build
+          sed -i "s/pageTitle: \"Quartz 4\"/pageTitle: \"Jeongsk\"/" quartz.config.ts
+          sed -i 's|baseUrl: "quartz.jzhao.xyz"|baseUrl: "log.jeongsk.work"|' quartz.config.ts
+          sed -i 's/locale: "en-US"/locale: "ko-KR"/' quartz.config.ts
+          sed -i 's/body: "Source Sans Pro"/body: "Gowun Dodum"/' quartz.config.ts
+          sed -i 's/header: "Schibsted Grotesk"/header: "Gowun Dodum"/' quartz.config.ts
+          echo 'p, ul, text, a, tr, td, li, ol, ul, .katex, .math, .typst-doc, .typst-doc * { word-break: keep-all; }' >> quartz/styles/custom.scss
+          cat quartz.config.ts
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -87,7 +87,7 @@ jobs:
         with:
           path: |
             quartz-build/.quartz-cache
-            quartz-build/public
+            # quartz-build/public
           key: quartz-build-${{ steps.quartz-version.outputs.commit }}-${{ steps.docs-hash.outputs.hash }}
           restore-keys: |
             quartz-build-${{ steps.quartz-version.outputs.commit }}-
